--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -230,7 +230,7 @@ Aa-4
                                         </div>
                                         <div class="overflow-hidden">
                                             <a class="badge badge-info mw-100" target="_blank"
-                                                v-bind:href="'/ticketTypeGroups/' + performance.offers.id + '/update'">
+                                                v-bind:href="'/offerCatalogs/' + performance.offers.id + '/update'">
                                                 {{ performance.offers.name.ja }}
                                             </a>
                                         </div>
