--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -110,6 +110,7 @@ Aa-4
                                     <th>開始</th>
                                     <th>終了</th>
                                     <th>キャパシティ</th>
+                                    <th>予約</th>
                                     <th>発券</th>
                                     <th>入場</th>
                                     <th>オファーカタログ</th>
@@ -137,8 +138,21 @@ Aa-4
                                     <td name="endDate|date:YY/MM/DD HH:mm">$endDate$</td>
                                     <td name="remainingAttendeeCapacity__maximumAttendeeCapacity">
                                         $remainingAttendeeCapacity$ / $maximumAttendeeCapacity$</td>
-                                    <td name="checkInCount">$checkInCount$</td>
-                                    <td name="attendeeCount">$attendeeCount$</td>
+                                    <td
+                                        name="aggregateReservation.aggregateDate|date:YYYY/MM/DD HH:mm:ss__aggregateReservation.reservationCount">
+                                        <a href="#" data-toggle="tooltip"
+                                            title="集計日時:$aggregateReservation.aggregateDate$">$aggregateReservation.reservationCount$</a>
+                                    </td>
+                                    <td
+                                        name="aggregateReservation.aggregateDate|date:YYYY/MM/DD HH:mm:ss__aggregateReservation.checkInCount">
+                                        <a href="#" data-toggle="tooltip"
+                                            title="集計日時:$aggregateReservation.aggregateDate$">$aggregateReservation.checkInCount$</a>
+                                    </td>
+                                    <td
+                                        name="aggregateReservation.aggregateDate|date:YYYY/MM/DD HH:mm:ss__aggregateReservation.attendeeCount">
+                                        <a href="#" data-toggle="tooltip"
+                                            title="集計日時:$aggregateReservation.aggregateDate$">$aggregateReservation.attendeeCount$</a>
+                                    </td>
                                     <td name="offers.id__offers.id">
                                         <a href="/offerCatalogs/$offers.id$/update" target="_blank">
                                             $offers.id$
