--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -61,13 +61,16 @@ Aa-4
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
+                                </div>
+
+                                <div class="form-group bmd-form-group col-md-2">
                                     <label class="bmd-label-static">上映日 <span class="text-danger">＊</span></label>
 
                                     <input autocomplete="off" class="form-control datepicker" name="date"
                                         placeholder="選択してください" maxlength="10">
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-2">
+                                <div class="form-group bmd-form-group col-md-1">
                                     <label class="bmd-label-static">表示形式</label>
 
                                     <select class="form-control" name="format">
@@ -78,15 +81,35 @@ Aa-4
                                     </select>
                                 </div>
 
-                                <div class="form-group bmd-form-group col-md-2">
-                                    <label class="bmd-label-static">座席指定</label>
+                                <div class="form-group bmd-form-group col-md-3">
+                                    <label class="bmd-label-static"></label>
 
-                                    <div class="form-check">
+                                    <div class="form-check form-check-inline">
                                         <label class="form-check-label" for="onlyReservedSeatsAvailable">
                                             <input class="form-check-input" type="checkbox"
                                                 name="onlyReservedSeatsAvailable" id="onlyReservedSeatsAvailable"
                                                 value="1">
                                             座席指定有のみ
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label" for="offersAvailable">
+                                            <input class="form-check-input" type="checkbox" name="offersAvailable"
+                                                id="offersAvailable" value="1">
+                                            公開中
+                                            <span class="form-check-sign">
+                                                <span class="check"></span>
+                                            </span>
+                                        </label>
+                                    </div>
+                                    <div class="form-check form-check-inline">
+                                        <label class="form-check-label" for="offersValid">
+                                            <input class="form-check-input" type="checkbox" name="offersValid"
+                                                id="offersValid" value="1">
+                                            販売中
                                             <span class="form-check-sign">
                                                 <span class="check"></span>
                                             </span>
