--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -61,6 +61,12 @@ Aa-4
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
+                                    <label for="superEvent[workPerformed][identifier]" class="bmd-label-static">
+                                        作品
+                                    </label>
+                                    <select class="form-control" name="superEvent[workPerformed][identifier]"
+                                        id="superEvent[workPerformed][identifier]" style="width: 100%;">
+                                    </select>
                                 </div>
 
                                 <div class="form-group bmd-form-group col-md-2">
