--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -155,9 +155,9 @@ Aa-4
                                             <i class="material-icons" style="font-size: 1.2em;">edit</i>
                                         </a>
                                     </td>
-                                    <td name="workPerformed.id__workPerformed.name|slice">
+                                    <td name="superEvent.workPerformed.id__superEvent.workPerformed.name|slice">
                                         <a target="_blank"
-                                            href="/creativeWorks/movie/$workPerformed.id$/update">$workPerformed.name$
+                                            href="/creativeWorks/movie/$superEvent.workPerformed.id$/update">$superEvent.workPerformed.name$
                                             <i class="material-icons" style="font-size: 1.2em;">open_in_new</i></a>
                                     </td>
                                     <td name="location.name.ja|slice">
@@ -281,7 +281,7 @@ Aa-4
                                     }" v-bind:style="getPerformanceStyle(performance, date).child"
                                         class="inner h-100 p-1 pointer border border-white overflow-hidden">
                                         <div class="overflow-hidden nowrap mw-100 text-x-small text-white">
-                                            {{ performance.name.ja }}
+                                            {{ performance.superEvent.name.ja }}
                                         </div>
                                         <div class="overflow-hidden">
                                             <a class="badge badge-info mw-100" target="_blank"
