--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -41,13 +41,6 @@
                             </select>
                         </div>
                         <div class="form-group bmd-form-group col-md-2">
-                            <label for="reservationNumber" class="bmd-label-static">
-                                予約番号
-                            </label>
-                            <input type="text" class="form-control" name="reservationNumber" id="reservationNumber"
-                                placeholder="予約番号" />
-                        </div>
-                        <div class="form-group bmd-form-group col-md-2">
                             <label for="reservedTicket[ticketedSeat][seatNumber]" class="bmd-label-static">
                                 座席コード
                             </label>
@@ -61,6 +54,19 @@
                             </label>
                             <input class="form-control" placeholder="追加テキスト" name="additionalTicketText"
                                 id="additionalTicketText" />
+                        </div>
+                        <div class="form-group bmd-form-group col-md-2">
+                            <label for="application" class="bmd-label-static">
+                                アプリケーション
+                            </label>
+                            <select class="form-control" name="application">
+                                <option value="">選択</option>
+                                <% applications.forEach(function(application) { %>
+                                <option value="<%= application.id %>">
+                                    <%= application.name %>
+                                </option>
+                                <% }) %>
+                            </select>
                         </div>
                     </div>
 
@@ -102,6 +108,13 @@
                         </div>
 
                         <div class="form-row">
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="reservationNumber" class="bmd-label-static">
+                                    予約番号
+                                </label>
+                                <input type="text" class="form-control" name="reservationNumber" id="reservationNumber"
+                                    placeholder="予約番号" />
+                            </div>
                             <div class="form-group bmd-form-group col-md-4">
                                 <label for="bookingFrom" class="bmd-label-static">
                                     予約日(From - To)
