--- a/views/reservations/_dataTables.ejs
+++ b/views/reservations/_dataTables.ejs
@@ -41,14 +41,6 @@
                             </select>
                         </div>
                         <div class="form-group bmd-form-group col-md-2">
-                            <label for="reservedTicket[ticketedSeat][seatNumber]" class="bmd-label-static">
-                                座席コード
-                            </label>
-                            <input class="form-control" placeholder="座席コード"
-                                name="reservedTicket[ticketedSeat][seatNumber]"
-                                id="reservedTicket[ticketedSeat][seatNumber]" />
-                        </div>
-                        <div class="form-group bmd-form-group col-md-2">
                             <label for="additionalTicketText[$eq]" class="bmd-label-static">
                                 追加テキスト
                             </label>
@@ -66,6 +58,13 @@
                                     <%= application.name %>
                                 </option>
                                 <% }) %>
+                            </select>
+                        </div>
+                        <div class="form-group bmd-form-group col-md-2">
+                            <label for="admin[id]" class="bmd-label-static">
+                                管理ユーザー
+                            </label>
+                            <select class="form-control" name="admin[id]" id="admin[id]" style="width: 100%;">
                             </select>
                         </div>
                     </div>
@@ -108,6 +107,14 @@
                         </div>
 
                         <div class="form-row">
+                            <div class="form-group bmd-form-group col-md-2">
+                                <label for="reservedTicket[ticketedSeat][seatNumber]" class="bmd-label-static">
+                                    座席コード
+                                </label>
+                                <input class="form-control" placeholder="座席コード"
+                                    name="reservedTicket[ticketedSeat][seatNumber]"
+                                    id="reservedTicket[ticketedSeat][seatNumber]" />
+                            </div>
                             <div class="form-group bmd-form-group col-md-2">
                                 <label for="reservationNumber" class="bmd-label-static">
                                     予約番号
@@ -256,6 +263,7 @@
                             <th>チケット</th>
                             <th>座席</th>
                             <th>チケットホルダー</th>
+                            <th>アプリ</th>
                             <th>追加テキスト</th>
                             <th>サブ</th>
                             <th>発券</th>
@@ -312,6 +320,7 @@
                                     <span>表示</span>
                                 </a>
                             </td>
+                            <td name="application.name|slice:15">$application.name$</td>
                             <td name="additionalTicketText|slice:10__id">$additionalTicketText$
                                 <a href="javascript:void(0)" class="editAdditionalTicketText" data-id="$id$">
                                     <i class="material-icons" style="font-size: 1.2em;">edit</i>
