--- a/public/scss/_common.scss
+++ b/public/scss/_common.scss
@@ -242,3 +242,6 @@ body {
 .select2 {
     margin-top: .4375rem;
 }
+.nav-pills.nav-pills-primary .nav-item .nav-link.active, .nav-pills.nav-pills-primary .nav-item .nav-link.active:focus, .nav-pills.nav-pills-primary .nav-item .nav-link.active:hover {
+    background-color: #9c27b0;
+}
